flux/sensors-report-frontend-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors-report-frontend-web
  namespace: default
  labels:
    app: sensors-report-frontend-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensors-report-frontend-web
  template:
    metadata:
      labels:
        app: sensors-report-frontend-web
    spec:
      containers:
        - name: sensors-report-frontend-web
          image: viobiscu/sensors-report-frontend-web:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
