flux/sensors-report-frontend-web/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-mssql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-mssql
  template:
    metadata:
      labels:
        app: frontend-mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-data

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-mssql-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: frontend-mssql
