flux/sensors-report-frontend-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - manage.sensorsreport.net
      secretName: sensors-report-frontend-web-tls
  rules:
    - host: manage.sensorsreport.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sensors-report-frontend-web
                port:
                  number: 8080
